force-app/main/default/objects/Batch_Definition__c/Batch_Definition__c.object-meta.xml
<CustomObject>
    <description>This object is to store all the batch definitions to be scheduled dynamically. There should be one record (only one record) per batch class with it’s definition</description>
    <label>Batch Definition</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Batch Definition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>