force-app/main/default/objects/Batch_Definition__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <description>It has the execution batch name, this is the value that will drive a specific execution of a batch (for example: TestBatch-Morning, TestBatch-Night or just TestBatch)</description>
    <externalId>true</externalId>
    <label>Batch Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>