force-app/main/default/objects/Batch_Definition__c/fields/Job_Size__c.field-meta.xml
<CustomField>
    <fullName>Job_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>To set the size of the batch. limit between 1 and 2000</description>
    <label>Job Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>