force-app/main/default/objects/Batch_Definition__c/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>This represents SObject API name of the scope of the batch.</description>
    <label>SObject API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>