force-app/main/default/objects/Batch_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Name__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Job_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>